packages/typ/tests/fixtures/diagnostics/0970_mli_binary_type_underapplied_03.mli.infer.expected
File "0970_mli_binary_type_underapplied_03.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0970_mli_binary_type_underapplied_03 is not a valid module name.

File "0970_mli_binary_type_underapplied_03.mli", line 2, characters 14-28:
2 | val x_gamma : int pair_gamma
                  ^^^^^^^^^^^^^^
Error: The type constructor pair_gamma expects 2 argument(s),
       but is here applied to 1 argument(s)
